--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.3.8",
     "@angular/platform-browser-dynamic": "^17.3.8",
     "@angular/router": "^17.3.8",
+    "electron-packager": "^17.1.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.16.1",
     "rxjs": "~7.8.0",
