--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
     "@angular/platform-browser": "^17.3.8",
     "@angular/platform-browser-dynamic": "^17.3.8",
     "@angular/router": "^17.3.8",
+    "@types/chart.js": "^2.9.41",
+    "apexcharts": "^3.49.1",
+    "chart.js": "^2.9.4",
+    "electron": "^30.0.5",
     "electron-packager": "^17.1.2",
+    "ng-apexcharts": "^1.10.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.16.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.5"
   },
   "devDependencies": {
