--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "src/styles.css",
               "node_modules/primeflex/primeflex.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/apexcharts/dist/apexcharts.min.js"
+            ]
           },
           "configurations": {
             "production": {
