--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "chart.js": "^2.9.4",
     "electron": "^30.0.5",
     "electron-packager": "^17.1.2",
+    "highcharts": "^11.4.1",
+    "highcharts-angular": "^4.0.0",
     "ng-apexcharts": "^1.10.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
